fix: close channel issue fix
